tests/ui/higher-ranked/trait-bounds/hrtb-higher-ranker-supertraits-transitive.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:47:5
   |
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'ccx> Bar<'ccx>`
              found trait `Bar<'static>`
note: the lifetime requirement is introduced here
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:32:15
   |
LL |     where B : for<'ccx> Bar<'ccx>
   |               ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
